--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/bordaer"
+        android:icon="@drawable/add"
         android:label="NoteX"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.MyApplication"
