Make Content Promo and Fetch him in Activity_Group

--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -1,19 +1,17 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
 }
 
 android {
-    namespace 'com.example.myapplication'
-    compileSdk 34
+    namespace 'com.example.mylibrary'
+    compileSdk 33
 
     defaultConfig {
-        applicationId 'com.example.GL'
         minSdk 26
-        targetSdk 34
-        versionCode 1
-        versionName "1.0"
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -32,12 +30,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
-    implementation 'org.apache.poi:poi:5.3.0'
-    implementation 'org.apache.poi:poi-ooxml:5.3.0'
-    implementation 'org.apache.commons:commons-collections4:4.4'
-    implementation 'com.google.code.gson:gson:2.11.0'
 }
