--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:tools="http://schemas.android.com/tools">
-
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -10,19 +8,17 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/add"
-        android:label="NoteX"
+        android:icon="@drawable/img_imher"
+        android:label="Im Here"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.MyApplication"
-        tools:targetApi="31" >
-
+        tools:targetApi="31">
         <activity
-            android:name=".Activity_Promo"
+            android:name=".Activity_SessionAttendance"
             android:exported="false" />
-
         <activity
             android:name=".Activity_Cover"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,12 +26,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity_Presentation"
+            android:name=".Activity_Promo"
             android:exported="false" />
         <activity
-            android:name=".Activity_Groups"
+            android:name=".Activity_StudentAttendance"
             android:exported="false" />
-
+        <activity
+            android:name=".Activity_AllGroups"
+            android:exported="false" />
     </application>
 
 </manifest>
