--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Base.Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".Activity_Group"
+            android:exported="false" />
+        <activity
             android:name=".Activity_SessionAttendance"
             android:exported="false" />
         <activity
